# react-native-simple-jsi

./: CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  react-native-simple-jsi.podspec
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/java/com/reactnativesimplejsi/: SimpleJsiModule.java  SimpleJsiModulePackage.java
cpp/: example.cpp  example.h
example/: App.js  package-lock.json  package.json
example/android/: settings.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/: MainApplication.java
example/ios/: Podfile
ios/: SimpleJsi.h  SimpleJsi.mm
src/: index.tsx
